# stablecoin-tracker

./: CMakeLists.txt  README.md  main.cpp
data/: stablecoin_history.db
modules/: email_notifier.cpp  email_notifier.hpp  etherscan_fetcher.cpp  etherscan_fetcher.hpp  price_fetcher.cpp  price_fetcher.hpp  risk_model.cpp  risk_model.hpp  sqlite_logger.cpp  sqlite_logger.hpp  websocket_client.cpp  websocket_client.hpp
